<resources>
    <string name="app_name">SixtySeconds</string>
    <string name="wait_countdown_text">Wait</string>
    <string name="start_countdown_text">Start</string>
    <string name="cancel_countdown_text">Stop</string>
    <string name="press_start_message">Press start!</string>
    <string name="finish_message">Finish!</string>
    <string name="cancel_message">Stopped!</string>
    <string name="answer_message">Answer</string>
    <string name="updating_message">Receiving question…</string>
    <string name="receiving_answer_message">Receiving answer…</string>
    <string name="next_question_message">Next question</string>
    <string name="vote_lebel">Do you like this question?</string>
    <string name="type_guess_title">Type your variant:</string>
    <string name="send_guess_label">Send</string>
    <string name="answer_not_received_error">Sorry, but something going wrong…</string>
    <string name="question_label"><![CDATA[#%1$d Level: <b>%2$s</b> Rate: %3$d<br /><br />%4$s]]></string>
    <string name="answer_label"><![CDATA[<string><u>Answer: </u></string>%1$s]]></string>
    <string name="answer_and_comment_label"><![CDATA[<strong><u>Answer: </u></strong>%1$s<br /><strong><u>Comment: </u></strong>%2$s]]></string>
    <string name="correct_label">Correct!</string>
    <string name="additional_rate_points">+%1$d Rate Points</string>
    <string name="wrong_label">Wrong!</string>
    <string name="privacy_policy_action_label">Privacy policy</string>
    <string name="max_question_difficulty">Set max question difficulty:</string>
    <string name="setup_game">Set up your game:</string>
    <!-- difficulties -->
    <string name="difficult_easiest">Easiest</string>
    <string name="difficult_normal">Normal</string>
    <string name="difficult_moderate">Moderate</string>
    <string name="difficult_Professional">Professional</string>
    <string name="difficult_Hardest">Hardest</string>
    <string name="difficult_Unknown">Unknown</string>
    <!-- game modes -->
    <string name="single_player_gamemode_title">Simple game</string>
    <string name="single_player_with_rate_gamemode_title">Rating game</string>

    <string-array name="difficulty_list">
        <item>@string/difficult_easiest</item>
        <item>@string/difficult_normal</item>
        <item>@string/difficult_moderate</item>
        <item>@string/difficult_Professional</item>
        <item>@string/difficult_Hardest</item>
    </string-array>

    <!-- Rating activity -->
    <string name="rating_title">Rating</string>
    <string name="points_title">Points:</string>
    <string name="place_title">Place:</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="first_place_title">1st place</string>
    <string name="second_place_title">2nd place</string>
    <string name="third_place_title">3rd place</string>
    <string name="fourth_place_title">4th place</string>
    <string name="fifth_place_title">5th place</string>
</resources>

